--- a/configs/search/rand/5.yaml
+++ b/configs/search/rand/5.yaml
@@ -6,7 +6,7 @@ report_interval: 10
 eval_interval: 50
 save_interval: 50
 
-data_path: data/rand
+data_path: /home/zhang/zouy/sat/data/rand
 train_sets:
   - name: 5-21
     samples: 2000
@@ -32,5 +32,6 @@ lr_milestones: [200, 500, 1000, 5000]
 lr_decay: 0.5
 
 method: reinforce
+a2c_n: 10
 discount: 0.25
 walk_prob: 0.5
