--- a/configs/search/kcolor/20.yaml
+++ b/configs/search/kcolor/20.yaml
@@ -9,12 +9,16 @@ save_interval: 50
 data_path: /home/zhang/zouy/sat/data/kcolor
 train_sets:
   - name: 5-20-0.5
-    samples: 2000
+    samples: 1000
     max_tries: 5
     max_flips: 500
     iterations: 10000
 
-eval_set: False
+eval_set:
+    name: 6-25-0.5
+    samples: 10
+    max_tries: 10
+    max_flips: 500
 
 model_path: results/search/kcolor/15/model_best.pth
 
