--- a/configs/search/kcolor/25.yaml
+++ b/configs/search/kcolor/25.yaml
@@ -1,4 +1,4 @@
-name: search/kcover/5
+name: search/kcolor/25
 seed: 1
 
 log_level: info
@@ -6,21 +6,21 @@ report_interval: 10
 eval_interval: 50
 save_interval: 50
 
-data_path: data/kcover
+data_path: /home/zhang/zouy/sat/data/kcolor
 train_sets:
-  - name: 5-9-0.5
-    samples: 2000
+  - name: 6-25-0.5
+    samples: 1000
     max_tries: 5
     max_flips: 500
     iterations: 10000
 
 eval_set:
-  name: 6-10-0.5
+  name: 7-30-0.5
   samples: 10
   max_tries: 10
   max_flips: 500
 
-model_path: results/search/kcover/4/model_best.pth
+model_path: results/search/kcolor/20/model_best.pth
 
 gnn_hidden_size: 32
 readout_hidden_size: 64
